# retrieval-eval

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: example_suite.yaml
data/: corpus.jsonl  queries.jsonl
docs/: avoiding_leakage.md  golden_set_guide.md
retrieval_eval/: __init__.py  cli.py  core.py  embeddings.py  metrics.py  regression.py  report.py  retrieval.py  schema.py
tests/: __init__.py  test_core.py  test_metrics.py  test_run_e2e.py
